--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-/* Custom Properties, update these for your own design */
 
+/* Custom Properties, update these for your own design */
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
@@ -35,12 +35,12 @@
     }
 }
 
-/* General styles */
 
+/* -----------------------------------------------------------------------------------------------General styles */
 /* endable this to add smooth scrolling */
-/* html {
+html {
     scroll-behavior: smooth;
-} */
+}
 
 
 body {
@@ -68,8 +68,8 @@ strong { font-weight: var(--fw-bold) }
     outline-offset: 3px;
 }
 
-/* Buttons */
 
+/* -----------------------------------------------------------------------------------------------Buttons */
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
@@ -88,8 +88,8 @@ strong { font-weight: var(--fw-bold) }
     transform: scale(1.1);
 }
 
-/* Typography */
 
+/* -----------------------------------------------------------------------------------------------Typography */
 h1,
 h2,
 h3 {
@@ -133,8 +133,8 @@ h3 { font-size: var(--fs-h3) }
     margin-bottom: 2em;
 }
 
-/* header */
 
+/* -----------------------------------------------------------------------------------------------header */
 header {
     display: flex;
     justify-content: space-between;
@@ -212,11 +212,6 @@ header {
     opacity: 0;
 }
 
-
-
-
-
-
 .hamburger {
     display: block;
     position: relative;
@@ -232,7 +227,6 @@ header {
     transition: transform 250ms ease-in-out;
 }
 
-
 .hamburger::before,
 .hamburger::after {
     content: '';
@@ -245,8 +239,7 @@ header {
 .hamburger::after { bottom: 6px; }
 
 
-/*  Intro section  */
-
+/*  -----------------------------------------------------------------------------------------------Intro section  */
 .intro {
     position: relative;
 }
@@ -290,9 +283,7 @@ header {
 }
 
 
-
-/*  My services section  */
-
+/*  -----------------------------------------------------------------------------------------------My services section  */
 .my-services {
     background-color: var(--clr-dark);
     background-image: url(../img/services-bg.jpg);
@@ -339,7 +330,6 @@ header {
     }
 }
 
-
 .about-me {
     max-width: 1000px;
     margin: 0 auto;
@@ -381,8 +371,7 @@ header {
     }
 }
 
-/* My Work */
-
+/* -----------------------------------------------------------------------------------------------My Work */
 .my-work {
     background-color: var(--clr-dark);
     color: var(--clr-light);
@@ -417,8 +406,7 @@ header {
 }
 
 
-/* footer */
-
+/* -----------------------------------------------------------------------------------------------footer */
 .footer {
     background: #111;
     color: var(--clr-accent);
@@ -463,8 +451,7 @@ header {
 }
 
 
-/* Individual portfolio item styles */
-
+/* -----------------------------------------------------------------------------------------------Individual portfolio item styles */
 .portfolio-item-individual {
     padding: 0 2em 2em;
     max-width: 1000px;
